--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
